# Agent-Foundry

./: .cursor-rules.md  .gitattributes  .gitignore  .npmignore  ATTRIBUTIONS.md  AUTHORSHIP.md  CHANGELOG.md  INSTALL.md  LICENSE  README.md  claude_code_plugin.json  install.sh  package.json  pyproject.toml  vercel.json
.antigravity/: README.md
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude-project/: README.md
.codebuddy/: README.md
.codex/: AGENTS.md  config.toml
.cursor/: hooks.json
.gemini/: AGENTS.md
.joycode/: README.md
.kimi/: README.md
.openclaw/: README.md
.opencode/: opencode.json
.qwen/: README.md
.zed/: README.md
agent_foundry/: __init__.py  __main__.py  cli.py  config.py  daemon.py  executor.py  indexer.py  judge.py  logging_db.py  loop.py  models.py  planner.py
agents/: openai.yaml
catalog/: .gitkeep  decisions.md  skills.csv  sources.md  state.json
community/: README.md
docs/: architecture.md  authoring.md  auto-learning.md  competitive-plan.md  competitive-position.md  launch-plan.md  philosophy.md
hooks/: post-commit  session-closeout.sh  session-end.sh
plans/: .gitkeep
schemas/: skill-manifest.schema.json
scripts/: activate.bat  activate.ps1  activate.sh  auto-extract.sh  build-site-data.sh  cost-report.py  foundry-eval.py  gen-site-data.py  graphify-run.py  indexer.py  install.bat  install.js  install.ps1  install.sh  nox.sh  provenance-audit.py  publish.sh  skill-update.sh  smoke-test.py  validate.sh
skills/: index.json
web/: adapters-data.js  audit.html  catalog.html  (+16 more)
(+103 files in other folders)
